--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import "components/card";
 @import "components/story";
 @import "components/bg-video";
+@import 'components/popup';
 @import "layout/navigation";
 @import "layout/header";
 @import "layout/grid";
