--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,8 +7,28 @@
   box-sizing: inherit;
 }
 html {
-  font-size: 62.5%;
+  // defines 1rem;
+  font-size: 62.5%; // 1 rem = 10px 10px/16px = 62.5%
+
+  // @include respond(phone) {
+  //   font-size: 50%
+  // }
+  @include respond(tab-land) {
+    font-size: 56.25% // 1rem = 9px, 9/16 = 56.25%
+  }
+  @include respond(tab-port) {
+    font-size: 50% // 1 rem = 9px
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%
+  }
+
 }
 body {
   box-sizing: border-box;
+  padding: 3rem;
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
