--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
   /* font-size: 16px; */
   line-height: 1.7;
   color: $color-gray-dark;
-  padding: 3rem;
 }
 
 
@@ -14,6 +13,8 @@ body {
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 6rem;
+
+    
     &--main {
       display: block;
       font-size: 6rem;
@@ -24,6 +25,10 @@ body {
       animation-timing-function: ease-out;
       /* animation-iteration-count: 3; */
       /* animation-delay: 3s; */
+      @include respond(phone) {
+        letter-spacing: 1rem;
+        font-size: 5rem;
+      }
     }
     &--sub {
       display: block;
@@ -33,6 +38,10 @@ body {
       animation: moveInRight 1s ease-out;
       /* animation-duration: 1s;
         animation-timing-function: ease-out; */
+        @include respond(phone) {
+          letter-spacing: .5rem;
+
+        }
     }
   }
   .heading-secondary {
@@ -46,6 +55,12 @@ body {
     letter-spacing: 2px;
     transition: all .2s;
 
+    @include respond(tab-port) {
+      font-size: 3rem;
+    }
+    @include respond(phone) {
+      font-size: 2.5rem;
+    }
     &:hover {
       transform: skewY(2deg) skewX(15deg) scale(1.1);
       text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
