--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -23,25 +23,13 @@
     &--back {
       transform: rotateY(180deg);
       &-1 {
-        background-image: linear-gradient(
-          to right bottom,
-          $color-secondary-light,
-          $color-secondary-dark
-        );
+        background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
       }
       &-2 {
-        background-image: linear-gradient(
-          to right bottom,
-          $color-primary-light,
-          $color-primary-dark
-        );
+        background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
       }
       &-3 {
-        background-image: linear-gradient(
-          to right bottom,
-          $color-tertiary-light,
-          $color-tertiary-dark
-        );
+        background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
       }
     }
   }
@@ -61,27 +49,17 @@
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 
     &--1 {
-      background-image: linear-gradient(
-          to right bottom,
-          $color-secondary-light,
-          $color-secondary-dark
-        ),
+      background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
         url(../img/nat-5.jpg);
     }
     &--2 {
-        background-image: linear-gradient(
-            to right bottom,
-            $color-primary-light,
-            $color-primary-dark
-          ),
-          url(../img/nat-6.jpg);    }
+      background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark),
+        url(../img/nat-6.jpg);
+    }
     &--3 {
-        background-image: linear-gradient(
-            to right bottom,
-            $color-tertiary-light,
-            $color-tertiary-dark
-          ),
-          url(../img/nat-7.jpg);    }
+      background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark),
+        url(../img/nat-7.jpg);
+    }
   }
 
   &__heading {
@@ -124,12 +102,12 @@
     }
   }
   &__cta {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 90%;
-      text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center;
   }
   &__price-box {
     text-align: center;
@@ -137,11 +115,52 @@
     margin-bottom: 8rem;
   }
   &__price-only {
-    font-size: 1.4rem;  
+    font-size: 1.4rem;
     text-transform: uppercase;
   }
   &__price-value {
     font-size: 6rem;
     font-weight: 100;
-  } 
+  }
+
+  @include respond(tab-port) {
+    height: auto;
+    border-radius: 3px;
+    background-color: $color-white;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+
+    &__side {
+      height: auto;
+      position: relative;
+      box-shadow: none;
+
+      &--back {
+        transform: rotateY(0);
+        clip-path: polygon(0% 15%, 100% 0%, 100% 100%, 0% 100%);
+      }
+    }
+
+    &:hover &__side--front {
+      transform: rotateY(0);
+    }
+    &__details {
+      padding: 1rem;
+    }
+    // front side styling
+    &__cta {
+      position: relative;
+      top: 0;
+      left: 0;
+      transform: translate(0);
+      width: 100%;
+      padding: 7rem 4rem 4rem 4rem;
+    }
+    &__price-box {
+      margin-bottom: 3rem;
+    }
+
+    &__price-value {
+      font-size: 6rem;
+    }
+  }
 }
