--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -6,11 +6,16 @@
   left: 0;
   background-color: rgba($color-black, 0.8);
   z-index: 9999;
-
   opacity: 0;
   visibility: hidden;
-
   transition: all 0.4s;
+// graceful degradation
+
+  @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba($color-black, 0.3);
+  }
 
   &__content {
     @include absCenter;
@@ -21,8 +26,8 @@
     display: table;
     overflow: hidden;
     opacity: 0;
-    transform: translate(-50%, -50%) scale(.25);
-    transition: all .5s .2s;
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all 0.5s 0.2s;
   }
   &__left {
     width: 33.33333333%;
